[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.3.0",
    "Pillow == 10.*",
    "pytz == 2024.2",
    "pyodbc == 5.2.0",
    "requests == 2.32.3",
    "requests_ntlm == 1.3.0",
    "Office365-REST-Python-Client == 2.6.2",
    "openpyxl == 3.1.5",
    "pandas == 2.2.3",
    "urllib3 == 2.4.0",
    "reportlab == 4.4.*"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
[tool.setuptools.packages.find]
exclude = ["journal_pdfs"]
